# PLUME-Python

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  pyproject.toml  requirements.txt  test.csv  test.py
.github/workflows/: ci.yml  github-actions.yml  release.yml
plume/: __init__.py  cli.py  dataframe_exporter.py  file_reader.py  filtering.py  frame_parser.py  parser.py  parser_utils.py  record.py  record_parser.py  record_reader.py  sample.py  sample_parser.py  xdf_exporter.py  xdf_writer.py
plume/decoder/: input_action_decoder.py  lsl_stream_decoder.py  marker_decoder.py  record_metadata_decoder.py  record_reader.py  sample_registry.py  sample_stream_reader.py
plume/decoder/frame/: __init__.py  frame_data_decoder.py  frame_data_decoder_registry.py  frame_decoder.py  game_object_decoder.py  xritk_interaction_decoder.py
plume/export/: dataframe_exporter.py  world_position_exporter.py  xdf_exporter.py  xdf_writer.py
plume/output/: record_2023-09-11T09-09-20+00.xdf  record_2023-09-11T09-38-28+00.xdf  record_2023-09-11T09-40-43+00.xdf  record_2023-09-11T09-47-11+00.xdf  record_2023-09-11T09-53-04+00.xdf
plume/proxy/: collection.py  record_metadata.py
plume/proxy/common/: animation_curve.py  bounds.py  color.py  marker.py  matrix4x4.py  quaternion.py  rect.py  spherical_harmonics.py  vector2.py  vector3.py  vector4.py
plume/proxy/lsl/: stream.py
plume/proxy/unity/: asset.py  asset_collection.py  frame.py  game_object.py  (+6 more)
plume/sample/: packed_sample_pb2.py  packed_sample_pb2.pyi  record_pb2.py  record_pb2.pyi
plume/samples/: __init__.py  packed_sample_pb2.py  record_header_pb2.py  record_metadata_pb2.py  record_pb2.py  record_version_pb2.py  sample_header_pb2.py
plume/utils/: game_object.py  transform.py
plume_python/: __init__.py  cli.py  file_reader.py  parser.py  record.py
plume_python/decoder/: input_action_decoder.py  lsl_stream_decoder.py  marker_decoder.py  record_decoder.py  record_index.py  record_metadata_decoder.py  record_reader.py  registry.py  sample_stream_reader.py
plume_python/export/: dataframe_exporter.py  xdf_exporter.py  xdf_writer.py
plume_python/proxy/: record_metadata.py
plume_python/reader/: sample.py  sample_stream_reader.py
plume_python/samples/: __init__.py  packed_sample_pb2.py  packed_sample_pb2.pyi  record_pb2.pyi
plume_python/utils/: dataframe.py  game_object.py  samples.py  transform.py
tests/: .gitignore  conftest.py  record.plm  record1.plm  record_0.plm  record_1.plm  record_2.plm  test_compute_world_position.py  test_compute_world_transform.py  test_export_xdf.py  test_filter_time_range.py  test_find_game_object_identifiers_by_name.py  test_frame_parser.py  test_load.py  test_parse_metadata.py  test_parser.py  test_read.py  test_read_frames.py  test_read_input_actions.py  test_record_reader.py  test_sample_parser.py  test_samples_to_dataframes.py
(+301 files in other folders)
