[tool.poetry]
name = "plume-python"
version = "0.1.14"
description = "Set of utilities to work with PLM record files."
authors = ["Charles JAVERLIAT <charles.javerliat@gmail.com>"]
license = "GPLv3"
readme = "README.md"
repository = "https://github.com/liris-xr/PLUME-Python"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.21.0"
numpy-quaternion = "^2023.0.3"
tqdm = "^4.66.4"
lz4 = "^4.3.2"
protobuf = "^5.0.0"
delimited-protobuf = "^1.0.0"
pandas = "^2.2.2"
click = "^8.0.3"
betterproto = "^1.2.5"
plume-toolbox-plume-protos-v1-protocolbuffers-python = {version = "29.3.0.1.20250128075449+1aa80b5932a5", source = "buf"}
typing-extensions = "^4.12.2"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pre-commit = "^3.7.1"

[[tool.poetry.source]]
name = "buf"
url = "https://buf.build/gen/python"
priority = "supplemental"

[tool.setuptools.packages.find]
exclude = ["tests"]

[tool.poetry.scripts]
plume-python = "plume_python.cli:cli"

[tool.ruff]
line-length = 79
target-version = "py39"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
